// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile Tile Snapshot can move matches current snapshot 1`] = `
<div
  class="hex tile"
  draggable="true"
  style="--color: #f64c72;"
  title="ant"
>
  <object
    data="/svg/ant.svg"
    type="image/svg+xml"
  >
    <img
      alt="ant"
      src="/svg/ant.svg"
    />
  </object>
</div>
`;

exports[`Tile Tile Snapshot no moves matches current snapshot 1`] = `
<div
  class="hex tile"
  draggable="false"
  style="--color: #85dcbc;"
  title="fly"
>
  <object
    data="/svg/fly.svg"
    type="image/svg+xml"
  >
    <img
      alt="fly"
      src="/svg/fly.svg"
    />
  </object>
</div>
`;
